--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 
-/* img{
-  width: 200px;
-} */
+img{
+  width: 350px;
+  border-radius: 9px;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  -ms-border-radius: 9px;
+  -o-border-radius: 9px;
+}
